Add nav buttons

--- a/self-exploration.html
+++ b/self-exploration.html
@@ -2,8 +2,9 @@
     <head>
         <link href="styles/main.css" rel="stylesheet">
         <title>About me</title>
-        <nav>
-      
+        <nav class="navbar"
+             id="navbar">
+            <a href="#title-section"><img src="images/home.png" id="home-bbtton"> <p>Home</p></a>
         </nav>
     </head>
     
