Finish Initial Layout

--- a/self-exploration.html
+++ b/self-exploration.html
@@ -29,7 +29,7 @@
       <section 
                class="main-article">
          <article>
-            <h2>About Me.</h2> 
+            <h2>Self-Exploration.</h2> 
             <img src="images/p5wfkmyvi2s41.jpg" id="melbourne">
             <p class="main-text"> I grew up in the eastern suburbs of Melbourne, to a middle-class white family. I lived near a train station, a Chinese restaurant, and the MCG (Melbourne’s largest sporting complex). I was the middle of five brothers. My mother was an art teacher, and my father an architect. I went to a private all-boys school, was part of the water polo team, and played video games on the weekend. Every Sunday my family went to church. When assembling the evidence for this blog post, I realised that the origins of my core values can be found here, with my family and my upbringing. My parents were kind and creative, which gave me a love of creativity. My faith taught me the importance of integrity and empathy. These came to be defining values in my life. <br><br>
                 
