Add Emotional Emotional_intelligence blog post.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                 <br><br>    <u>Read More</u></p> </a>
          </div>
           
+          <div class="blog-post">
+            <a href="Emotional_intelligence.html"> <img src="images/emotionsbw.jpg" class="melbourne-tile">
+            <h2>Emotional Intelligence.</h2> 
+            <p class="melbourne-tile-description"> "The ability to monitor one's own and other people's emotions, to discriminate between different emotions and label them appropriately, and to use emotional information to guide thinking and behavior".
+
+                <br><br>    <u>Read More</u></p> </a>
+         </div>
           
       </section>  
         <br>
