Add Sprint-3 Technical Blog page

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
          </div>
           
           <div class="blog-post">
-            <a href="Sprint-2-Reflection.html"> <img src="images/reflection-week-2.jpg" class="melbourne-tile">
-            <h2>Self-exploration.</h2> 
+            <a href="Sprint-2-core-reflections.html"> <img src="images/reflection-week-2.jpg" class="melbourne-tile">
+            <h2>Core Reflections.</h2> 
             <p class="melbourne-tile-description"> What is your long term goal and or career pathway? What skills (non-technical - human skills) would you like to see developed in yourself while at EDA?A description of your own strengths and limitations...
                 <br><br>    <u>Read More</u></p> </a>
          </div>
@@ -63,6 +63,14 @@
             <a href="Emotional_intelligence.html"> <img src="images/emotionsbw.jpg" class="melbourne-tile">
             <h2>Emotional Intelligence.</h2> 
             <p class="melbourne-tile-description"> "The ability to monitor one's own and other people's emotions, to discriminate between different emotions and label them appropriately, and to use emotional information to guide thinking and behavior".
+
+                <br><br>    <u>Read More</u></p> </a>
+         </div>
+          
+          <div class="blog-post">
+            <a href="Javascript-basic-concepts.html"> <img src="images/landscapingbw.jpg" class="melbourne-tile">
+            <h2>Javascript Basic Concepts.</h2> 
+            <p class="melbourne-tile-description"> Html is a series of plants. Eucalyptus trees, lavender bushes, sunflowers, ferns and blackberry bushes. If you just plant them in the backyard with no order or plan they still provide fruit and value like the html can provide information...
 
                 <br><br>    <u>Read More</u></p> </a>
          </div>
