Add Problem solving blog post

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,100&display=swap" rel="stylesheet">
         <link href="styles/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <title id="index-title">My blog</title>
@@ -75,10 +75,18 @@
                 <br><br>    <u>Read More</u></p> </a>
          </div>
           
-          <div class="blog-post">
+         <div class="blog-post">
             <a href="Neuroplasticity.html"> <img src="images/Neuroplasticitybw.jpg" class="melbourne-tile">
             <h2>Neuroplasticity and the Growth Mindset.</h2> 
             <p class="melbourne-tile-description"> When we learn, we create new pathways between neurons in our brains. We often get caught in a trap of saying "I'm good at X but I'm terrible at Y" and that becomes a fixed concept to us.
+
+                <br><br>    <u>Read More</u></p> </a>
+         </div>
+          
+         <div class="blog-post">
+            <a href="Problem-Solving.html"> <img src="images/Problem-solvingbw.jpg" class="melbourne-tile">
+            <h2>Problem Solving.</h2> 
+            <p class="melbourne-tile-description"> During the "Manipulating JS Objects" section of the Kata, I couldn't seem to figure out how on earth I was supposed to make Carson (an object) one of Terah's (another object) children (an object key) . I was trying to put an object inside an object which was inside another object.
 
                 <br><br>    <u>Read More</u></p> </a>
          </div>
