--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
 
                 <br><br>    <u>Read More</u></p> </a>
          </div>
+
+         <div class="blog-post">
+          <a href="week-5-reflections.html"> <img src="images/mirrorbw.jpg" class="melbourne-tile">
+          <h2>Final Reflections from Foundations</h2> 
+          <p class="melbourne-tile-description"> What are three new things you have learned about yourself and your ego as a result of the core learning? What are the role of values, empathy and self awareness in learning and programming?
+
+              <br><br>    <u>Read More</u></p> </a>
+       </div>
           
       </section>  
         <br>
